fix:document name does not overflow container

--- a/src/css/notes.css
+++ b/src/css/notes.css
@@ -63,7 +63,7 @@
 }
 
 .notes-name {
-    /* word-break: break-all; */
+    word-break: break-all;
     color: inherit;
     font-weight: 400;
     /* text-transform: lowercase; */
